# DoggyCar

./: README.md
Web/components/fb_gfx/: CMakeLists.txt  idf_component.yml
Web/components/modules/: CMakeLists.txt  Kconfig  idf_component.yml
Web/components/modules/ai/: who_cat_face_detection.cpp  who_color_detection.cpp  who_human_face_detection.cpp  who_human_face_recognition.hpp
Web/components/modules/web/www/: index_gc2145.html
Web/components/yahboom_esp32-camera/sensors/: gc2145.c
Web/esp32Board_wifi/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
Web/esp32Board_wifi/main/: CMakeLists.txt  app_main.cpp
Web/gpsvideo/: map.py  pick.py
Web/gpsvideo/gps_data/: COM10_20260120_120146.txt  gps_data_20260120_102059.txt  gps_data_20260120_105226.txt  gps_data_20260120_112528.txt  gps_data_20260120_221609.txt  gps_data_20260120_222015.txt
Web/gpsvideo/realtime_gps_data/: gps_data_20260120_120202.txt
Web/map/: bc.py  wifi_gps_receiver.py
Web/map/AI_Camera/: AI_Camera.ino  esp32_wifi.cpp  esp32_wifi.hpp  esp_key.cpp  esp_key.hpp
Web/map/GPS_UNO_Test/: GPS_UNO_Test.ino
Web/map1/: COM9_20260119_0926278.txt  dijkstra_run.py  gps_track_20260119_130431.html  windows.py
gpsvideo/face_cat_detection_logs/: statistics.txt
gpsvideo/gps_data/: gps_data_20260120_101911.txt
lib/SF_CAN/: SF_CAN.cpp  SF_CAN.h
lib/SF_IMU/: MPU6050_tockn.cpp
map1/: COM6_20260119_154412.txt  gps_track_20260119_130522.html  map.py
mapgpsreceiver/: face_timestamp_logger.py
src/: bipedal_data.h  config.h  main.cpp
(+23 files in other folders)
